ingress.yaml
#creating ingress resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /service-a
            pathType: Prefix
            backend:
              service:
                name: service-a-srv
                port: 
                  number: 80
          - path: /service-b
            pathType: Prefix
            backend:
              service:
                name: service-b-srv
                port: 
                  number: 80
