networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-except-service-a-to-service-b
spec:
  podSelector:
    matchLabels:
      app: service-b-pod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchExpressions:
              - key: app
                operator: NotIn
                values: ["service-a-pod"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-except-service-b-to-service-a
spec:
  podSelector:
    matchLabels:
      app: service-a-pod
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchExpressions:
              - key: app
                operator: NotIn
                values: ["service-b-pod"]
